2006-12-04 [paul]	2.6.0cvs22-stable

	* src/exphtmldlg.c
		backported from 2.6.0cvs80:
		fix broken GUI under certain languages
	* src/expldifdlg.c
		backported from 2.6.0cvs80:
		put the Cancel button to the right

2006-12-01 [paul]	2.6.0cvs21-stable

	* tools/Makefile.am
		backport from 2.6.0cvs79:
		remove reference to removed file

2006-12-01 [paul]	2.6.0cvs20-stable

	* src/common/utils.c
		backport from 2.6.0cvs67:
		Create .mailcap if it doesn't exist

2006-12-01 [paul]	2.6.0cvs19-stable

	* src/compose.c
		backport from 2.6.0cvs66:
		Followup to cvs60: use original list
		of recipients if replying to a mail
		in Sent Drafts or Queue.

2006-12-01 [paul]	2.6.0cvs18-stable

	* src/textview.c
		backported from 2.6.0cvs70:
		give emphasis to "Sylpheed-Claws"
		as well as "Claws Mail"

2006-12-01 [paul]	2.6.0cvs17-stable

	* tools/kdeservicemenu/README
	* tools/kdeservicemenu/claws-mail-kdeservicemenu.pl
	* tools/kdeservicemenu/install.sh
	* tools/kdeservicemenu/template_claws-mail-attach-files.desktop
	* tools/kdeservicemenu/template_claws-mail-compress-attach.desktop
		backport fix from 2.6.0cvs74

2006-12-01 [wwp]	2.6.0cvs16-stable

	* src/summaryview.c
		backport bug fix from 2.6.0cvs71:
		As the list may change while the mark as read delay
		runs, we can't rely on the 'row' pointer, which can
		be invalid when the timeout is called. As the mark
		as read is only done if the message is still selected,
		use summaryview->selected instead. Thanks to Colin.

2006-11-28 [paul]	2.6.0cvs15-stable

	* src/compose.c
		backport bug fix from 2.6.0cvs60:
		fix bug that caused the wrong recipient
		to be selected when replying to a msg
		which is From one of our accounts to
		another of our accounts

2006-11-25 [paul]	2.6.0cvs14-stable

	* src/summaryview.c
		backport fix from 2.6.0cvs59:
		don't change the From column title to
		To if the To column is visible

2006-11-24 [paul]	2.6.0cvs13-stable

	* tools/kdeservicemenu/template_claws-mail-compress-attach.desktop